dépalcement de index.html à la racine du projet

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="desciption" content="page web portfolio de clément, étudiant en informatique à bordeaux">
-    <link rel="manifest" href="../res/data/manifest/manifest.webmanifest">
+    <link rel="manifest" href="res/data/manifest/manifest.webmanifest">
 
     <!-- charger la police d'écriture -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,13 +20,13 @@
         rel="stylesheet">
 
     <!-- charger le style -->
-    <link href="../css/reset.css" rel="stylesheet">
-    <link href="../css/main.css" rel="stylesheet">
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
     <!-- charger les icônes (font awesome)-->
     <script src="https://kit.fontawesome.com/bf31f3517c.js" crossorigin="anonymous"></script>
 
-    <link rel="shortcut icon" href="../res/img/icon.png"> <!-- charger la miniature -->
+    <link rel="shortcut icon" href="res/img/icon.png"> <!-- charger la miniature -->
 
     <title>Portfolio - Clément AUBIER - Etudiant informatique</title>
 </head>
@@ -67,11 +67,11 @@
                     <span class="fade-up">Salut, je suis en première année d'études en IUT informatique à
                         Bordeaux.</span>
                 </p>
-                <button class="classic-button" onclick="window.open('../res/docs/CV.pdf', '_blank')"><i
+                <button class="classic-button" onclick="window.open('res/docs/CV.pdf', '_blank')"><i
                         class="fa-solid fa-download"></i> Télécharger mon CV</button>
             </div>
             <div class="right">
-                <img src="../res/img/autoportrait.png" alt="mon autoportrait" draggable="false">
+                <img src="res/img/autoportrait.png" alt="mon autoportrait" draggable="false">
             </div>
         </section>
 
@@ -80,7 +80,7 @@
             <h2 class="section-title">Me concernant</h2>
             <div class="content">
                 <div class="left">
-                    <img src="../res/img/portrait.png" alt="photo de moi">
+                    <img src="res/img/portrait.png" alt="photo de moi">
                 </div>
                 <div class="right">
                     <p class="fade-up-container"><span class="fade-up first-fade">Je m'appelle Clément Aubier, j'ai 18
@@ -100,7 +100,7 @@
                             persévérance et ma curiosité me permettent de mener à bien les
                             projets confiés, tout en me permettant de découvrir toujours plus
                             sur ma passion.</span></p>
-                    <button class="classic-button dl-button" onclick="window.open('../res/docs/CV.pdf', '_blank')"><i
+                    <button class="classic-button dl-button" onclick="window.open('res/docs/CV.pdf', '_blank')"><i
                             class="fa-solid fa-download"></i> Télécharger mon CV</button>
                     <button onclick="window.location.href = '#footer'" class="classic-button"><i
                             class="fa-solid fa-address-card"></i> Me contacter</button>
@@ -117,7 +117,7 @@
                     <div class="horizontal">
                         <div class="vertical-bar"></div>
                         <h3 class="projects-subtitle">Jeux vidéo</h3>
-                        <img class="unfold-button" src="../res/img/plus.svg" alt="croix animation">
+                        <img class="unfold-button" src="res/img/plus.svg" alt="croix animation">
                         <!--<i class="fa-solid fa-download modifie"></i>!-->
                     </div>
                     <div class="horizontal-bar"></div>
@@ -159,7 +159,7 @@
                     <div class="horizontal">
                         <div class="vertical-bar"></div>
                         <h3 class="projects-subtitle">Algorithmique</h3>
-                        <img class="unfold-button" src="../res/img/plus.svg" alt="croix animation">
+                        <img class="unfold-button" src="res/img/plus.svg" alt="croix animation">
                     </div>
                     <div class="horizontal-bar"></div>
                 </div>
@@ -174,7 +174,7 @@
                     <div class="horizontal">
                         <div class="vertical-bar"></div>
                         <h3 class="projects-subtitle">Web</h3>
-                        <img class="unfold-button" src="../res/img/plus.svg" alt="croix animation">
+                        <img class="unfold-button" src="res/img/plus.svg" alt="croix animation">
                     </div>
                     <div class="horizontal-bar"></div>
                 </div>
@@ -189,7 +189,7 @@
                     <div class="horizontal">
                         <div class="vertical-bar"></div>
                         <h3 class="projects-subtitle">Gestion & Communication</h3>
-                        <img class="unfold-button" src="../res/img/plus.svg" alt="croix animation">
+                        <img class="unfold-button" src="res/img/plus.svg" alt="croix animation">
                     </div>
                     <div class="horizontal-bar"></div>
                 </div>
@@ -255,7 +255,7 @@
 
     <!-- charger le js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
