--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
 
     <!-- charger le js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
     <script src="js/main.js"></script>
 
 </body>
