retirage certianes infos cringes

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
                     <span class="fade-up">Salut, je suis en première année d'études en IUT informatique à
                         Bordeaux.</span>
                 </p>
-                <button class="classic-button" onclick="window.open('res/docs/CV.pdf', '_blank')"><i
-                        class="fa-solid fa-download"></i> Télécharger mon CV</button>
+                <button class="classic-button">
+                    <!-- onclick="window.open('res/docs/CV.pdf', '_blank')" !--><i class="fa-solid fa-download"></i>
+                    Télécharger mon CV
+                </button>
             </div>
             <div class="right">
                 <img src="res/img/autoportrait.png" alt="mon autoportrait" draggable="false">
@@ -100,8 +102,10 @@
                             persévérance et ma curiosité me permettent de mener à bien les
                             projets confiés, tout en me permettant de découvrir toujours plus
                             sur ma passion.</span></p>
-                    <button class="classic-button dl-button" onclick="window.open('res/docs/CV.pdf', '_blank')"><i
-                            class="fa-solid fa-download"></i> Télécharger mon CV</button>
+                    <button class="classic-button dl-button">
+                        <!-- onclick="window.open('res/docs/CV.pdf', '_blank')" !--><i class="fa-solid fa-download"></i>
+                        Télécharger mon CV
+                    </button>
                     <button onclick="window.location.href = '#footer'" class="classic-button"><i
                             class="fa-solid fa-address-card"></i> Me contacter</button>
                 </div>
@@ -242,7 +246,7 @@
                 <p><a class="clickable" href="mailto:clement.aubier.1@etu.u-bordeaux.fr"><i
                             class="fa-solid fa-envelope"></i>
                         clement.aubier.1@etu.u-bordeaux.fr</a></p>
-                <p><i class="fa-solid fa-phone"></i> 06.33.54.50.01</p>
+                <p><i class="fa-solid fa-phone"></i> 01.02.03.04.05</p>
                 <div class="row">
                     <a href="https://hellolife2750.itch.io/"><i class="fa-brands fa-itch-io"></i></a>
                     <a href="https://www.youtube.com/channel/UCIxZRrYtMjIFYaABfA2hjFQ/"> <i
